--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>index</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="img/window-icon/window-icon.png" type="image/png">
+  <link rel="shortcut icon" href="img/window-icon/window-icon-3.svg" type="image/png">
 </head>
 
 <body>
